RESOLVED FIXED 153558
Modern IDB: Cursors are utterly broken in the SQLite backend
https://bugs.webkit.org/show_bug.cgi?id=153558
Summary Modern IDB: Cursors are utterly broken in the SQLite backend
Brady Eidson
Reported 2016-01-27 13:58:54 PST
Modern IDB: Cursors are utterly broken in the SQLite backend 1 - The SQLite statement is almost always for an index cursor when it should be for an object store cursor. 2 - The backend doesn't correctly report back when a cursor is at or past its end.
Attachments
Patch v1 (9.57 KB, patch)
2016-01-27 14:05 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-01-27 14:05:47 PST
Created attachment 270035 [details] Patch v1
WebKit Commit Bot
Comment 2 2016-01-27 14:57:18 PST
Comment on attachment 270035 [details] Patch v1 Clearing flags on attachment: 270035 Committed r195696: <http://trac.webkit.org/changeset/195696>
WebKit Commit Bot
Comment 3 2016-01-27 14:57:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.