Modern IDB: Cursors are utterly broken in the SQLite backend. https://bugs.webkit.org/show_bug.cgi?id=153558

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (35 failures now pass, others improve).

- Fixes incorrect usage of Index cursors when ObjectStore cursors are intended.
- Improves the state of getting the cursor value vs. reaching the end of a cursor.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::openCursor):
(WebCore::IDBServer::SQLiteIDBBackingStore::iterateCursor):

* Modules/indexeddb/server/SQLiteIDBCursor.cpp:
(WebCore::IDBServer::SQLiteIDBCursor::SQLiteIDBCursor):
(WebCore::IDBServer::SQLiteIDBCursor::currentData):
* Modules/indexeddb/server/SQLiteIDBCursor.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/171634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195696 268f45cc-cd09-0410-ab3c-d52691b4dbfc